# sozu-pulsar-connector

./: .env.example  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example.config.toml
.github/workflows/: ci.yml
examples/: send_request.rs  send_requests.rs
src/: cfg.rs  cli.rs  lib.rs  main.rs  message.rs  metrics_server.rs
src/svc/: config.rs  logging.rs  mod.rs
src/svc/http/: mod.rs
src/svc/http/server/: handler.rs  layer.rs  mod.rs
src/svc/messaging/: connector.rs  message.rs  mod.rs
systemd/: sozu-pulsar-connector.service
