[package]
name = "sozu-pulsar-connector"
version = "0.1.1"
edition = "2021"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>"]

[dependencies]
anyhow = "^1.0.66"
clap = { version = "4.1.4", features = ["derive"] }
config = "^0.13.3"
futures = "0.3"
path-absolutize = "^3.0.14"
pulsar = "^6.0.0"
serde = { version = "^1.0.148", features = ["derive"] }
serde_json = "^1.0.89"
sozu-command-lib = "^0.15.0"
tokio = { version = "^1.29.0", features = ["macros", "rt-multi-thread", "net", "time", "signal", "fs", "sync"] }
tempdir = "^0.3.7"
thiserror = "^1.0.40"
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
