[package]
name = "sozu-pulsar-connector"
version = "0.1.1"
edition = "2021"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>"]

[dependencies]
anyhow = "^1.0.66"
clap = { version = "4.1.4", features = ["derive"] }
config = "^0.13.3"
futures = "0.3"
path-absolutize = "^3.0.14"
prometheus = "^0.13.3"
pulsar = "^6.0.0"
rand = "0.8.4"
serde = { version = "^1.0.148", features = ["derive"] }
serde_json = "^1.0.89"
sozu-command-lib = "^0.15.0"
tempdir = "^0.3.7"
thiserror = "^1.0.40"
tokio = { version = "^1.29.0", features = ["macros", "rt-multi-thread", "net", "time", "signal", "fs", "sync"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
once_cell = "^1.18.0"
axum = { version = "^0.6.18", default-features = false, features = ["http1", "matched-path", "original-uri", "tokio", "tracing", "tower-log"] }
hyper = { version = "^0.14.27", default-features = false, features = ["http1", "server"] }
mime = "^0.3.17"
